--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body {
     border-radius: 1rem;
   }
   
-  .progress-bar-container {
+  .bar-container {
     background: #eee;
     height: 20px;
     border-radius: 10px;
@@ -55,7 +55,7 @@ body {
     overflow: hidden;
   }
   
-  .progress-bar {
+  .bar {
     background: linear-gradient(to right, #ff6b81, #f0932b);
     height: 100%;
     width: 0%;
